--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"author": "Humza Haseeb",
 	"description": "Learning Node on freecodecamp",
+	"keywords": ["Node", "express", "freecodecamp"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
