--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Humza Haseeb",
 	"description": "Learning Node on freecodecamp",
 	"keywords": ["Node", "express", "freecodecamp"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
